# sxscatalog

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: catalog_notebook.py
src/sxscatalog/: __about__.py  __init__.py
src/sxscatalog/metadata/: __init__.py  metadata.py  metric.py
src/sxscatalog/simulations/: __init__.py  local.py  rit_maya_simulations.py  simulations.py
src/sxscatalog/utilities/: __init__.py  downloads.py  string_converters.py  sxs_directories.py
src/sxscatalog/utilities/convert_other_catalogs/: convert_MAYA_pkl.py  convert_RIT_site.py
tests/: __init__.py  test_import.py
